examples/test/testpolicy6795.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6795
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key12: value17
      key4: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value17
          key5: value43
      podSelector:
        matchLabels:
          key42: value42
